--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,31 @@
 body{
 	margin: 0px;
 }
+.navbar{
+	background: gray;
+	height:10vh;
+
+
+}
 .top-list{
-	background-color: #333;
+	background-color: gray;
 	display: flex;
 	list-style: none;
 	font-size: 2em;
+	width: auto;
 	margin: 0px;
+	padding:0px;
 	text-decoration: none;
 	font-family: 'Roboto', sans-serif;
 }
+.top-item-login{
+	margin-left:auto;
+}
 li{
 	color:whitesmoke;
-	padding:20px;
+	padding:25px;
 	text-decoration: none;
-	text-align: center;
+
 }
 a{
 	text-decoration: none;
@@ -30,9 +41,7 @@ a:visited{
 li:hover{
 	background-color: black;
 }
-.top-item-login{
-	margin-left: auto;
-}
+
 
 
 
@@ -61,22 +70,32 @@ li:hover{
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
 }
-@media only screen and (max-width:600px){
-	.top-list{
-		font-size:0.6em;
-		padding:0%;
-	}
-	.container-about{
-		font-size: 1.7vh;
-	}
+.toggle-button{
+	position:absolute;
+	top: 1.5rem;
+	right: 1rem;
+	display: none;
+	flex-direction:column;
+	justify-content: space-between;
+	width:30px;
+	height:21px;
 }
+
+.toggle-button .bar{
+	height:3px;
+	width: 100%;
+	background: white;
+
+}
+
 .container-pizza{
 	display: flexbox;
-	height: 210vh;
+	height: auto;
 	background-color: #fff1da;
 	border: black;
 	border-style: double;
 	border-width: 2vh;	
+
 
 }
 #title-pizza{
@@ -89,12 +108,10 @@ li:hover{
 }
 .pizza-holder{
 	display: grid;
-	grid-template-columns: repeat(3, auto);
-	grid-template-rows: repeat(3, auto);
-	
-	
-	justify-items: center;
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 	grid-gap: 10vh;
+	justify-items: center;
+
 	
 }
 .pizza{
@@ -109,4 +126,40 @@ li:hover{
 }
 .add-product{
 	margin-top:3vh;
+}
+@media only screen and (max-width:600px){
+	.toggle-button{
+		display: flex;
+	}
+	.top-item{
+		/*display: none;*/
+	}
+	.top-list{
+		width:100%;
+		flex-direction: column;
+	}
+	.top-item-login{
+		display: none;
+		margin-left:0;
+
+	}
+	.top-item{
+		width: 100%;
+		left-margin:0;
+		display: none;
+	}
+	.navbar{
+		flex-direction: column;
+		align-items: flex-start;
+		height: auto;
+		width: auto;
+	}
+	.container-about{
+		font-size: 1.5vh;
+		padding:30px;
+		text-align: center;
+	}
+
+	
+
 }
